<resources>
    <string name="app_name">Profile</string>
    <string name="my_name">Lương Hàn Nhật</string>
    <string name="follow">110.5K</string>
    <string name="follow1">Theo dõi</string>
    <string name="posts">521.4K</string>
    <string name="content">Bài viết</string>
    <string name="friend">241.4K</string>
    <string name="friend1">Bạn bè</string>
    <string name="email">hannhat20T2@gmail.com</string>
    <string name="address">Duy Xuyên, Quảng Nam</string>
    <string name="phone">0898871228</string>
    <string name="github">github.com/LHanNhat20T2</string>
</resources>