<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    
<!--    head -->
    <RelativeLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00868B">

            <androidx.cardview.widget.CardView
                android:id="@+id/imgUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginBottom="25dp"
                app:cardCornerRadius="200dp">

                <ImageView
                    android:layout_width="109dp"
                    android:layout_height="126dp"
                    android:layout_centerInParent="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/anhthe" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imgUser"
                android:fontFamily="sans-serif-light"
                android:text="@string/my_name"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:padding="5dp"
                android:textSize="28sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/head"
        android:background="@drawable/secondlayer"
        >
<!--        Bài viết   -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:padding="15dp"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/posts"
                    android:textSize="28sp"
                    android:textColor="#FAF0E6"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-light" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/content"
                    android:textSize="20sp"
                    android:textColor="#FAF0E6"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-light"
                    android:textAllCaps="true"
                    android:paddingLeft="10dp"/>
            </LinearLayout>
        </RelativeLayout>

<!--        theo dõi   -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:padding="15dp"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/follow"
                    android:textSize="28sp"
                    android:textColor="#FAF0E6"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-light" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/follow1"
                    android:textSize="20sp"
                    android:textColor="#FAF0E6"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-light"
                    android:textAllCaps="true"/>
            </LinearLayout>
        </RelativeLayout>

<!--        bạn bè         -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:padding="15dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/friend"
                    android:textSize="28sp"
                    android:textColor="#FAF0E6"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-light" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/friend1"
                    android:textSize="20sp"
                    android:textColor="#FAF0E6"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-light"
                    android:textAllCaps="true"
                    android:paddingLeft="10dp"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>


</RelativeLayout>